--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rss</title>
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" sizes="144x144"  href="/images/144.png">
+    <link rel="icon" type="image/png" sizes="144x144"  href="images/144.png">
     <style>
         html{
             scroll-behavior: smooth;
