--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rss</title>
+    <link rel="canonical" href="https://harikishnan.github.io/RssNodeJsApp/" />
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" sizes="144x144"  href="images/144.png">
     <style>
